according to the body of text (covering assumptions modulo local
definitions); predicate "loc_axioms" covers newly introduced text,
while "loc" is cumulative wrt. all included locale expressions; the
latter view is presented only on export into the global theory
context; potential INCOMPATIBILITY, use "(open)" option to fall back
on the old view without predicates;

* improved thms_containing: proper indexing of facts instead of raw
theorems; check validity of results wrt. current name space; include
local facts of proof configuration (also covers active locales); an
optional limit for the number of printed facts may be given (the
default is 40);


*** HOL ***

* attribute [symmetric] now works for relations as well. It turns
  (x,y) : R^-1 into (y,x) : R, and vice versa.

* arith(_tac) does now know about div k and mod k where k is a numeral of
  type nat or int. It can solve simple goals like
  "0 < n ==> n div 2 < (n::nat)"
  but fails if divisibility plays a role like in
  "n div 2 + (n+1) div 2 = (n::nat)".
* simp's arithmetic capabilities have been enhanced a bit:
  it now takes ~= in premises into account (by performing a case split).



New in Isabelle2002 (March 2002)
--------------------------------

*** Document preparation ***

* greatly simplified document preparation setup, including more
graceful interpretation of isatool usedir -i/-d/-D options, and more
instructive isatool mkdir; users should basically be able to get
started with "isatool mkdir HOL Test && isatool make"; alternatively,
users may run a separate document processing stage manually like this:
"isatool usedir -D output HOL Test && isatool document Test/output";

* theory dependency graph may now be incorporated into documents;
isatool usedir -g true will produce session_graph.eps/.pdf for use
with \includegraphics of LaTeX;

* proper spacing of consecutive markup elements, especially text
blocks after section headings;
